[package]
name = "birdnest-api"
version = "0.9.0"
edition = "2021"
authors = ["Elias Eskelinen <elias.eskelinen@pm.me>"]
repository = "https://github.com/xypine/birdnest-api"

[dependencies]
# Main http server and middleware
actix-web = "4"
actix-cors = "0.6"
actix-web-lab = "0.19"
# Library used for making http requests
reqwest = "0.11"
# XML parser
quick-xml = { version = "0.29", features = ["serde", "serialize"] }
# Convenient error handling
anyhow = "1.0"
# Easy global variables
lazy_static = "1.4"
# Cache implementation
moka = { version = "0.11", features = ["future"] }
# OpenApi implementation
paperclip = { version = "0.8", features = [
    "actix4",
    "swagger-ui",
    "rapidoc",
    "v3",
] }
# Automatic parallelization
rayon = "1.7.0"
# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async runtime
tokio = { version = "1.29", features = ["full"] }
# Misc utilities
env_logger = "0.10"
futures = "0.3"
chrono = "0.4"
log = "0.4"

[features]
default = []

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true    # Enable link-time optimizations
opt-level = 3 # All optimizations
